hub/.config/hub-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress 
metadata: 
  name: api-hub-ingress
  annotations: 
    kubernetes.io/ingress.class: contour 
spec: 
  rules: 
    - host: api-hub.apps.dekt.io
      http: 
        paths: 
          - backend: 
              serviceName: api-portal-server
              servicePort: 8080
