hub/.config/scg-openapi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress 
metadata: 
  name: scg-openapi
  annotations: 
    kubernetes.io/ingress.class: contour 
spec: 
  rules: 
    - host: scg-openapi.apps.dekt.io
      http: 
        paths: 
          - backend: 
              serviceName: scg-operator
              servicePort: 80
